k8s/ingress/apis_ingress_route.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  namespace: api-dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: poi
              servicePort: 80
            path: /api/poi(/|$)(.*)
          - backend:
              serviceName: trips
              servicePort: 80
            path: /api/trips(/|$)(.*)
          - backend:
              serviceName: userprofile
              servicePort: 80
            path: /api/user(/|$)(.*)
          - backend:
              serviceName: user-java
              servicePort: 80
            path: /api/user-java(/|$)(.*)
