k8s/ingress/tripviewer_ingress_route.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: tripviewer
              servicePort: 80
            path: /hello-world-one(/|$)(.*)
          - backend:
              serviceName: aks-helloworld-two
              servicePort: 80
            path: /hello-world-two(/|$)(.*)
          - backend:
              serviceName: tripviewer
              servicePort: 80
            path: /(.*)
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress-static
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: tripviewer
              servicePort: 80
            path: /static(/|$)(.*)
